# igs

./: .gitignore  PyWhatKit_DB.txt  README.md  areas.py  backtest-v2.py  backtest.py  custom_types.py  dibi_api_types.py  dibi_hist_event_store.py  flood_threat.py  gadm_java.py  indices.py  interface.py  main.py  map.py  map_utils.py  metrics.py  mock.py  notification.py  notifiers.py  pyproject.toml  requirements.txt  ruff.toml  run.sh  sources.py  streamlit_app.py  telegram_messaging_api.py  testing_guide.md  utils.py  whatsapp_messaging_api.py
cadastre/: README.md  dibi_provinces.md  gadm41_IDN_3_Java.dbf  gadm41_IDN_3_Java.shx  gadm_provinces_l1.md
results/: eval1.md
