[project]
name = "igs"
version = "0.1.0"
description = "FEWS for Indonesia, Bandung Regency"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "basemap>=1.4.1",
    "beautifulsoup4>=4.13.4",
    "cartopy>=0.24.1",
    "gdal<3.10.0",
    "geopandas>=1.0.1",
    "matplotlib>=3.8.4",
    "netcdf4>=1.7.2",
    "osmnx>=2.0.3",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pyproj>=3.6.1",
    "pyqt6>=6.9.0",
    "rasterio>=1.4.3",
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "xarray>=2025.4.0",
    "flask>=3.1.1",
    "numpy>=1.26.4",
    "pyautogui>=0.9.54",
    "pywhatkit>=5.4",
    "selenium>=4.33.0",
    "uuid>=1.30",
]
